appdeployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-backend
spec:
  selector:
    app: nginx-backend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 9113
      targetPort: 9113
      name: metrics
  type: NodePort  # By default, use ClusterIP for internal access
